<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3f3f3f" 
    android:padding="10dp"
    >

     <TextView
         android:id="@+id/wc1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:background="@drawable/rounded_corner_header"
         android:gravity="left"
         android:text="@string/actualization"
         android:textColor="#333333"
         android:textSize="8pt" />

     <Button
         android:id="@+id/btUpdateApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/wc1"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_weight="1"
         android:background="@drawable/rounded_corner"
         android:onClick="updateApp"
         android:padding="8dp"
         android:text="@string/actualization_button"
         android:textColor="#ffffff"
         android:textSize="8pt" />

     <TextView
         android:id="@+id/updateText"
         android:padding="15dp"
         android:background="#ffffff"
         android:textColor="#555555"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btUpdateApp"
         android:layout_alignLeft="@+id/wc1"
         android:layout_alignRight="@+id/btUpdateApp"
         android:layout_below="@+id/wc1"
         android:text="@string/actualization_desc"
         android:textSize="7pt" />
     
</RelativeLayout>
