<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#3f3f3f">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="6dip"
        android:inAnimation="@anim/fade_in"
        android:outAnimation="@anim/fade_out" >

        <!--
        <TextView 
            android:id="@+id/wc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#13b8be"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="15pt"
            android:text="@string/wc1"/>
        
        <TextView 
            android:id="@+id/wc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#dfdfdf"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="15pt"
            android:text="@string/wc2"/>
        
        <TextView 
            android:id="@+id/wc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#13b8be"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="18pt"
            android:text="@string/wc3"/>

        <TextView 
            android:id="@+id/wc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#dfdfdf"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="18pt"
            android:text="@string/wc4"/>
        
        <TextView 
            android:id="@+id/wc5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#13b8be"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="18pt"
            android:text="@string/wc5"/>
        -->

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/qlink" />

        <TextView
            android:id="@+id/isoLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="42dp"
            android:text="@string/wc6"
            android:textColor="#ffffff"
            android:textSize="11pt"
            android:visibility="visible" />
    </ViewFlipper>

    <TextView
        android:id="@+id/isoLogoExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/wc7"
        android:textColor="#13b8be"
        android:textSize="9pt"
        android:visibility="visible" />

    <TextView
        android:id="@+id/rights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:text="@string/copyright"
        android:textColor="#dfdfdf"
        android:textSize="8pt"
        android:visibility="visible" />

</RelativeLayout>